# opentele2

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  api.py  consistency.py  debug.py  devices.py  exception.py  fingerprint.py  qt_compat.py  utils.py  version_fetcher.py
src/td/: __init__.py  account.py  auth.py  configs.py  map_data.py  mtp.py  shared.py  storage.py  storage_account.py  tdesktop.py
src/tl/: configs.py  session_io.py  shared.py  telethon.py
tests/: tdata_test.py  test_fingerprints.py  test_full.py
