[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentele2"
version = "1.2.1"
description = "A Python Telegram API Library for converting between tdata and telethon sessions, with built-in official Telegram APIs."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "DedInc.", email = "visitanimation@gmail.com" },
]
keywords = ["tdata", "tdesktop", "telegram", "telethon", "opentele", "opentele2"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
    "telethon>=1.43.2",
    "TgCrypto-pyrofork>=1.2.6",
	"selectolax>=0.4.10",
]

[project.optional-dependencies]
web = [
    "browserforge",
]

[project.urls]
Homepage = "https://github.com/DedInc/opentele2"
"Bug Tracker" = "https://github.com/DedInc/opentele2/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/src",
]
exclude = [
    "**/__pycache__",
    "/.ruff_cache",
    "/.pytest_cache",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "opentele2"